--- a/meltano.yml
+++ b/meltano.yml
@@ -10,10 +10,17 @@ plugins:
   - name: tap-facebook
     variant: matatika
     pip_url: git+https://github.com/Matatika/tap-facebook.git
+  - name: tap-google-analytics
+    variant: matatika
+    pip_url: git+https://github.com/Matatika/tap-google-analytics@v0.3.0
   loaders:
   - name: target-postgres
     variant: matatika
     pip_url: git+https://github.com/Matatika/pipelinewise-target-postgres@v0.2.0
+  transforms:
+  - name: dbt-google-analytics
+    variant: matatika
+    pip_url: https://github.com/Matatika/dbt-tap-google-analytics@v0.4.0
   transformers:
   - name: dbt
     variant: dbt-labs
@@ -23,6 +30,9 @@ plugins:
   - name: files-dbt
     variant: matatika
     pip_url: git+https://github.com/Matatika/files-dbt@v1.2
+  - name: analyze-google-analytics
+    variant: matatika
+    pip_url: git+https://github.com/Matatika/analyze-google-analytics@v0.4.1
   utilities:
   - name: matatika
     variant: matatika
